public directory for images

--- a/Jott.css
+++ b/Jott.css
@@ -9,8 +9,7 @@ body {
     padding: 0;
     
     background-color: #999999;
-    background-image: url(http://www.transparenttextures.com/patterns/fabric-of-squares.png);
-    /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+    background-image: url(/fabric-of-squares.png);
     
 }
 .starter-template {
