--- a/Jott.css
+++ b/Jott.css
@@ -3,6 +3,11 @@ html {
     height: 100%;
 }
 
+@font-face {
+    font-family: trench;
+    src: url(/trench100free.otf);
+}
+
 body {
 /*  padding-top: 50px;*/
     height: 100%;
@@ -28,7 +33,7 @@ body {
     height: 100%;
 }
 
-#boxdiv {
+.boxdiv {
     display: block;
     position:absolute;
     height:auto;
@@ -37,10 +42,9 @@ body {
     left:0;
     right:0;
     margin-top: 40px;
-/*    z-index: -1;*/
 }
 
-#box {
+.box {
     height: 100%;
     width: 100%;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -61,6 +65,13 @@ body {
     padding-bottom: 0;
 }
 
+#welcome {
+    background-color: #FFFFFF;
+    font-size: 14pt;
+    font-family: trench;
+    background-image: url(/brilliant.png);
+}
+
 #jotttitle {
     font-size: 24px;
     float: left;
@@ -72,6 +83,8 @@ body {
     border-left: 10px;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.5);
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.5);
+    font-family: trench;
+    font-size: 20pt;
 }
 
 #login {
@@ -82,6 +95,8 @@ body {
     background-color: black;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.50);
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.50);
+    font-family: trench;
+    font-size: 12pt;
 }
 
 #login-buttons a{
@@ -125,7 +140,7 @@ body {
 
 /* Medium devices (desktops, 992px and up) */
 @media(min-width:992px){
-    #box {
+    .box {
         margin-top: 50px;
         -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
         box-shadow: 0 1px 2px 0 rgba(0,0,0,.50);
@@ -134,11 +149,16 @@ body {
         border-radius: 10px;
         max-height: 500px;
     }
+    
+    #welcome {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media(min-width:1200px){
-    #box {
+    .box {
         
     }
 }
